# security-kg

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  detector_request.yml  false_positive.yml
.github/workflows/: ci.yml
examples/remote_resume_drift/: gateway.py
examples/vault/02 - Targets/: Target - Example App.md
examples/vault/03 - Findings/: Finding - Example App - Direct Load Drift.md
src/security_kg/: __init__.py  cli.py  doctor.py  extract.py  invariants.py  io.py  report.py  schema.py
src/security_kg/vault/: __init__.py  export.py  insights.py  writers.py
tests/: test_doctor_insights.py  test_export_finding.py  test_security_kg.py  test_vault_graph.py
