[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vulnweave"
version = "0.1.0"
description = "Local-first vulnerability research graph for source-code review, proof planning, and finding-vault workflows."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Lennon"}]
keywords = ["security", "sast", "knowledge-graph", "vulnerability-research", "obsidian"]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
vulnweave = "security_kg.cli:main"
security-kg = "security_kg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/security_kg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
